<resources>
    <string name="app_name">BlueAlarm</string>
    <string name="edittext_hint"><font size="15">Hint here!</font></string>
    <string name="full_name">Full name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="check_your_email">Check your email</string>
    <string name="enter_the_code">Enter the code</string>
    <string name="sign_up">Sign up</string>
    <string name="underlined"><u>Sign Up</u> </string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="notHavingAccount">Don\'t you have an account?</string>
    <string name="log_in_as_guest">Log in as guest</string>
    <string name="alarm">ALARM</string>
    <string name="blue">BLUE</string>
    <string name="main_menu_measurement">Record</string>
    <string name="main_menu_doctor">Doctor</string>
    <string name="main_menu_home">Home</string>
    <string name="main_menu_date">Date</string>
    <!--<string name="main_menu_measurement">
    <font size="500">Measurements</font><font size="500"> Text in normal font size 10</font>
</string>
-->
    <!--to toggle the open close button
       of the navigation drawer-->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="title_activity_add_pills">AddPills</string>


    <string-array name="duration_dropdown">
        <item>once in day</item>
        <item>once in month</item>
        <item>once in year</item>
    </string-array>


    <string-array name="color_dropdown">
        <item>White</item>
        <item>yellow</item>
        <item>Orange</item>
        <item>Black</item>
        <item>Blue</item>
        <item>Brown</item>
        <item>Red</item>
        <item>Green</item>
        <item>Purple</item>
    </string-array>


    <string-array name="doctor_time">
        <item>8am</item>
        <item>9am</item>
        <item>10am</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>