<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/measur_bottom_appbar"
        android:icon="@drawable/measur"
        android:contentDescription="@string/main_menu_measurement"
        app:showAsAction="ifRoom"
        android:title="@string/main_menu_measurement" />
    <item
        android:id="@+id/home_bottom_appbar"
        android:contentDescription="@string/main_menu_home"
        android:icon="@drawable/home_outline"
        android:title="@string/main_menu_home"
        app:showAsAction="always"
/>
    <item android:id="@+id/placeHolder"
        android:title=""
        ></item>
    <item
        android:id="@+id/list_bottom_appbar"
        android:contentDescription="@string/main_menu_list"
        android:icon="@drawable/list"
        android:title="@string/main_menu_list"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/doctor_bottom_appbar"
        android:contentDescription="@string/main_menu_doctor"
        android:icon="@drawable/doctor"
        android:title="@string/main_menu_doctor"
        app:showAsAction="ifRoom" />

</menu>