<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="360dp"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="#1AA2D6F9"


    android:layout_gravity="center_horizontal"


  >
    <RelativeLayout
        android:gravity="center_horizontal"
        android:id="@+id/editLayout"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginRight="44dp"
        android:layout_marginLeft="44dp"
        android:padding="18dp"

        >

        <EditText
            android:id="@+id/editText1"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_width="254dp"
            android:layout_height="48dp"
            android:background="@color/white"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:textColorHint="#4D031544"
            android:translationZ="4dp"
             />

        <EditText
            android:id="@+id/editText2"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_width="254dp"
            android:layout_height="48dp"
            android:layout_below="@+id/editText1"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:hint="@string/username"
            android:inputType="text"
            android:textColorHint="#4D031544"
            android:translationZ="4dp" />

        <EditText
            android:id="@+id/editText3"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_width="254dp"
            android:layout_height="48dp"
            android:layout_below="@+id/editText2"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="#4D031544"
            android:translationZ="4dp"

            />

        <EditText
            android:id="@+id/editText4"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_width="254dp"
            android:layout_height="48dp"
            android:layout_below="@+id/editText3"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#4D031544"
            android:translationZ="4dp"

            />

        <EditText
            android:id="@+id/editText5"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_width="247dp"
            android:layout_height="49dp"
            android:layout_below="@+id/editText4"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColorHint="#4D031544"
            android:translationZ="4dp"
           />


    </RelativeLayout>

    <Button
        android:id="@+id/signUp_btn"
        android:text="Sign Up"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_width="145dp"
        android:layout_height="58.14dp"
        android:layout_below="@+id/editLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:backgroundTint="@color/btn_color" />


</RelativeLayout>


