<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1AA2D6F9"
    android:backgroundTint="@color/backgroundColor"
    tools:context=".Login">

    <EditText
        android:id="@+id/username"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_text"
        android:hint="@string/username"
        android:paddingStart="5dp"
        android:shadowColor="#EF1515"
        android:singleLine="false"
        android:textColorHint="#4D031544"
        android:textSize="19sp"
        android:textStyle="bold"
        android:translationZ="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:id="@+id/password"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_text"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="4dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="3dp"
        android:singleLine="false"
        android:textColorHint="#4D031544"
        android:textSize="19sp"
        android:textStyle="bold"
        android:translationZ="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.368" />

    <Button
        android:translationZ="4dp"
        android:id="@+id/loginbutton2"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/btn_color"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="#F5F6F8"
        android:textSize="19sp"
        android:textStyle="bold"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.695" />

    <TextView
        android:id="@+id/noaccounttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="@string/notHavingAccount"
        android:textColor="#031544"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.368"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbutton2"
        app:layout_constraintVertical_bias="0.485" />

    <Button
        android:id="@+id/signupbutton2"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:background="#00A2D6F9"
        android:insetLeft="0dp"
        android:paddingStart="6dp"
        android:paddingEnd="5dp"
        android:text="@string/sign_up"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/btn_color"
        android:textSize="13sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/noaccounttext"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.883" />

    <Button
        android:id="@+id/forgotpassbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00F7F8F8"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="#031544"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/loginbutton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.392" />
</androidx.constraintlayout.widget.ConstraintLayout>
