<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".Welcome"
    >

    <ImageView
        android:id="@+id/clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115"
        app:srcCompat="@mipmap/clock" />

    <TextView
        android:id="@+id/bluetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="@string/blue"
        android:textColor="@color/btn_color"
        android:textSize="34sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.711"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11" />

    <TextView
        android:id="@+id/alarmtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00F5F6F8"
        android:clickable="false"
        android:text="@string/alarm"
        android:textColor="@color/btn_color"
        android:textSize="34sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.787"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.184" />

    <Button
        android:id="@+id/loginbutton1"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/btn_color"
        android:shadowColor="#F31717"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="#F5F6F8"
        android:textSize="16sp"
        android:textStyle="bold"
        android:translationZ="4dp"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.547" />

    <Button
        android:id="@+id/signupbutton1"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/btn_color"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#F5F6F8"
        android:textSize="16sp"
        android:textStyle="bold"
        android:translationZ="4dp"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702" />

    <Button
        android:id="@+id/loginasguest"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/btn_color"
        android:clickable="true"
        android:focusable="true"
        android:shadowRadius="20"
        android:text="@string/log_in_as_guest"
        android:textAllCaps="false"
        android:textColor="#F5F6F8"
        android:textSize="13sp"
        android:textStyle="bold"
        android:translationZ="4dp"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.848"
        android:paddingTop="7dp"
        android:gravity="center_horizontal"
        />
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="473dp"
        android:scaleType="fitXY"
        android:src="@mipmap/subtraction"
        android:paddingStart="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

</androidx.constraintlayout.widget.ConstraintLayout>