<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Confirmation"
    android:background="#1AA2D6F9"
    android:layout_gravity="center_horizontal">
    <ImageView
        android:id="@+id/emailImage"
        android:layout_width="45dp"
        android:layout_height="34dp"
        android:layout_marginTop="65dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_baseline_email_24"/>
    <TextView
        android:id="@+id/txt_checck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="19sp"
        android:text="@string/check_your_email"
        android:textColor="@color/btn_color"
        android:layout_below="@+id/emailImage"
        android:layout_marginTop="27dp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/txt_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="19sp"
        android:text="@string/enter_the_code"
        android:textColor="@color/btn_color"
        android:layout_below="@+id/txt_checck"
        android:layout_marginTop="36dp"
        android:layout_centerHorizontal="true"/>
        <RelativeLayout
            android:id="@+id/code_layout"
            android:layout_width="258dp"
            android:layout_height="111dp"
            android:layout_below="@+id/txt_enter"
            android:layout_marginTop="51dp"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            >

            <EditText
                android:paddingStart="24dp"
                android:paddingEnd="16dp"
                android:id="@+id/txt1_code"
                android:layout_width="49dp"
                android:layout_height="111dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/custom_text"
                android:inputType="number"
                android:maxLength="1"
                android:shadowColor="#000000"
                android:textSize="19sp"
                android:textStyle="bold"
                android:translationZ="4dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                 />
            <EditText
                android:id="@+id/txt2_code"
                android:layout_width="49dp"
                android:layout_height="111dp"
                android:textSize="19sp"
                android:textStyle="bold"
                android:layout_toEndOf="@+id/txt1_code"
                android:layout_marginEnd="8dp"
                android:background="@drawable/custom_text"
                android:inputType="number"
                android:translationZ="4dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:maxLength="1"
                android:paddingStart="24dp"
                android:paddingEnd="16dp"/>
            <EditText
                android:id="@+id/txt3_code"
                android:layout_width="49dp"
                android:layout_height="111dp"
                android:textSize="19sp"
                android:textStyle="bold"
                android:layout_toEndOf="@+id/txt2_code"
                android:layout_marginEnd="8dp"
                android:background="@drawable/custom_text"
                android:inputType="number"
                android:translationZ="4dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:maxLength="1"
                android:paddingStart="24dp"
                android:paddingEnd="16dp"/>
            <EditText
                android:id="@+id/txt4_code"
                android:layout_width="49dp"
                android:layout_height="111dp"
                android:textSize="19sp"
                android:textStyle="bold"
                android:layout_toEndOf="@+id/txt3_code"
                android:background="@drawable/custom_text"
                android:inputType="number"
                android:translationZ="4dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:maxLength="1"
                android:paddingStart="24dp"
                android:paddingEnd="16dp"/>


        </RelativeLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:layout_below="@+id/code_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:backgroundTint="@color/btn_color"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textSize="19sp"
        android:textStyle="bold"
        app:cornerRadius="40dp"
        />

</RelativeLayout>